--- a/styleguide.css
+++ b/styleguide.css
@@ -1,5 +1,3 @@
-@media (max-width: 400px) {
-
 :root {
     --basewhite: #fff;
     --black: #080809;
@@ -32,8 +30,8 @@
     box-sizing: border-box;
    
 }
-html, body{
-    width: 400px;
+*{
+    margin: 0px;
     padding: 0px;
 }
 body{
@@ -2459,9 +2457,8 @@ body{
 }
 
 
-
-    @media (max-width: 400px) {
-
+@media (max-width: 387px) {
+    
 }
 
 
